# ChangeLog for net-im/psi-gmailservice
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  27 Dec 2010; Nikoli <nikoli@lavabit.com>
  +psi-gmailservice-0.5.7_pre3417.ebuild:
  version bump

  12 Dec 2010; Nikoli <nikoli@lavabit.com>
  +psi-gmailservice-0.5.6_pre3373.ebuild:
  version bump

*psi-gmailservice-9999 (30 Nov 2010)

  30 Nov 2010; Rion <rion4ik@notagmail.com> +psi-gmailservice-9999.ebuild,
  +metadata.xml:
  rename to psi-gmailservice

  21 Oct 2010; Nikoli <nikoli@lavabit.com>
  +psi-gmailnotify-0.4.7_pre3077.ebuild:
  version bump

  08 Aug 2009; Rion <rion4ik@gmail.com> ChangeLog:
  create ChangeLog
