@@ -1,6 +1,10 @@
 # ChangeLog for net-im/psi-gmailservice
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  25 Jan 2011; Nikoli <nikoli@lavabit.com>
+  +psi-gmailservice-0.5.9_pre3593.ebuild:
+  version bump
 
   27 Dec 2010; Nikoli <nikoli@lavabit.com>
   +psi-gmailservice-0.5.7_pre3417.ebuild:
